# Vytrix

./: .gitignore  CMakeLists.txt  Readme.md  SIMDVytrix.cpp  Vytrix.hpp  testVytrix.cpp  test_vytrix.cpp
libs/colors/: colors.hpp
src/: test.cpp  vytrix.hpp
