cmake_minimum_required (VERSION 3.11)
project(Vytrix)
if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
    set(MACOSX TRUE)
endif()
set (CMAKE_CXX_STANDARD 11)
include_directories(./libs)
include_directories(.)
include_directories(CATCH_SINGLE_INCLUDE)
add_executable(test test_vytrix.cpp)
if(MACOSX)
    message(MACOSX Detected)
    include_directories(/Users/khalidakash/CXXProjects/boost_1_67_0/boost/)
    set(CMAKE_SHARED_LINKER_FLAGS "-L/Users/khalidakash/CXXProjects/boost_1_67_0/ -lboost_system")
endif()
if(WIN32)
endif()